fixed IE layout issues

--- a/files/css/layout.css
+++ b/files/css/layout.css
@@ -143,30 +143,34 @@ position: relative;
 padding-top:1.7em;
 width: 650px;
 list-style: none inherit none;
-display: inline-block;
+/*display: inline-block;*/ /*causes problem in IE */
+
 }
 
 #nav li {
 	/* use this for centered navigation */
 
-	display: inline-block;
+	display: inline;
 	
 }
 
 
 #nav li a
 {
-	display: block;
+	
 	display: inline-block;
 	font-size:16px;
 	font-family: Verdana, Arial, sans-serif;
-	border: 1px solid #1c1c1c;
+	
 	color: #D2D8DE;
 	padding: 5px 10px 3px;
 	background: transparent;
 	margin: 0 5px;
+	
+	border-radius:5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	border: 1px solid #1c1c1c;
 	-webkit-transition: all 0.2s linear;
 	transition: all 0.2s linear;
 
